Revert "Attempt to fix footer on iOS"
This reverts commit 8b4630e038d8d170793bdc923eabeff5265162d9.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -66,9 +66,7 @@
 }
 
 .mdl-layout__content {
-  display: -webkit-flex;
   display: flex;
-  -webkit-flex-direction: column;
   flex-direction: column;
 }
 
